# dora-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_CONSTITUTION.md  README.md  README_zh.md  dev.sh  package-lock.json  package.json  quickstart.yml  registry.json  simulate_clean_install.sh  voice_to_text.yml
.github/workflows/: ci.yml  release.yml
crates/dm-cli/: Cargo.toml
crates/dm-cli/src/: bridge.rs  display.rs  main.rs  panel.rs
crates/dm-cli/src/builtin/: mod.rs  panel.rs  test_harness.rs
crates/dm-cli/src/cmd/: dataflow.rs  mod.rs  node.rs  runs.rs  service.rs  test.rs
crates/dm-cli/tests/: phase4_cli.rs
crates/dm-core/: Cargo.toml
crates/dm-core/src/: config.rs  dataflow.rs  dora.rs  env.rs  events.rs  graph.rs  install.rs  lib.rs  node.rs  registry.rs  runs.rs  test_support.rs  types.rs  util.rs
crates/dm-core/src/api/: doctor.rs  error.rs  handlers.rs  mod.rs  routes.rs  runtime.rs  setup.rs  version.rs
crates/dm-core/src/dataflow/: import.rs  inspect.rs  mod.rs  model.rs  paths.rs  repo.rs  service.rs
crates/dm-core/src/dataflow/transpile/: bridge.rs  context.rs  error.rs  mod.rs  model.rs  passes.rs
crates/dm-core/src/events/: builder.rs  export.rs  mod.rs  model.rs  op.rs  store.rs
crates/dm-core/src/install/: archive.rs  binary.rs  github.rs  mod.rs  progress.rs  source.rs
crates/dm-core/src/node/: download.rs  hub.rs  import.rs  init.rs  install.rs  local.rs  mod.rs  model.rs  paths.rs  tests.rs
crates/dm-core/src/node/schema/: compat.rs  mod.rs  model.rs  parse.rs  tests.rs
crates/dm-core/src/panel/: mod.rs  model.rs  store.rs
crates/dm-core/src/runs/: graph.rs  mod.rs  model.rs  repo.rs  runtime.rs  service.rs  service_admin.rs  service_metrics.rs  service_query.rs  service_runtime.rs  service_start.rs  service_tests.rs  state.rs
crates/dm-core/src/runs/panel/: mod.rs  model.rs  store.rs
crates/dm-core/src/service/: import.rs  install.rs  invoke.rs  local.rs  mod.rs  model.rs  paths.rs  tests.rs
crates/dm-core/src/tests/: mod.rs  tests_api.rs  tests_config.rs  tests_dataflow.rs  tests_env.rs  tests_graph.rs  tests_node.rs  tests_registry.rs  tests_types.rs  tests_util.rs
crates/dm-core/tests/: tests_api_handlers.rs
crates/dm-server/: Cargo.toml
crates/dm-server/src/: handlers.rs  interaction_service.rs  main.rs  state.rs  tests.rs
crates/dm-server/src/handlers/: bridge_socket.rs  dataflow.rs  events.rs  interaction.rs  messages.rs  mod.rs  nodes.rs  panel.rs  panel_ws.rs  run_ws.rs  runs.rs  runtime.rs  services.rs  system.rs  web.rs
crates/dm-server/src/services/: input.rs  media.rs  message.rs  mod.rs  stream.rs
demos/: demo-hello-timer.yml  demo-interactive-widgets.yml  demo-logic-gate.yml  robotics-object-detection.yml
docs/: architecture-principles.md  architecture.md  backend_code_health_standard.md  backend_health_roadmap_to_a_minus.md  backend_structure_health_improvement_plan.md  design_ui_system.md  design_ux_pages.md  dm-custom-panel.md  dm-downloader.md  dm-exclusive-nodes.md  dm-panel-design.md  dm-run-instance-design.md  dm-server-service-roadmap.md  dm-test.md  frontend-interaction-api.md  frontend-run-scoped-messaging.md  interaction-nodes.md  interaction-rebuild-todo.md  next-phase-dm-store.md  prompt_event_integration.md  refactor-panel-architecture.md  refactor-remove-panel.md  run-recording-replay.md  run-scoped-interaction-messaging-milestone.md  service-design-philosophy.md  system-test-dataflows-checklist.md  system-test-dataflows-plan.md  workspace-message-panel-design.md  workspace-refactoring-plan.md
docs/.vitepress/: config.mts
docs/blog/: building-dora-manager-with-ai.md
docs/design/: dm-capability-binding-v0.md  dm-mjpeg.md  dm-node-install.md  dm-port-schema.md  dm-queue.md  dm-readiness-and-logic-nodes.md  dm-screen-stream-node.md  dm-server-mediamtx-integration.md  dm-service-v0-roadmap.md  dm-streaming-architecture.md  dm-streaming-implementation-checklist.md  panel-ontology-memo.md  panel-stream-aggregation.md
docs/nodeEditor/: P1-readonly-canvas.md  P2-editable-canvas.md  P3-palette-inspector.md  P4-schema-validation-polish.md
docs/prompts/: dataflow-frontend-refactor-gemini.md  panel-phase1-core.md  panel-phase2-cli.md  panel-phase3-server.md  panel-phase4-web.md  web-runs-pages-gemini.md
docs/records/: README.md  steering-cycles.md  ux-test-rounds.md
nodes/: README.md
nodes/dm-and/: README.md  dm.json  pyproject.toml
nodes/dm-and/dm_and/: main.py
nodes/dm-button/: dm.json  pyproject.toml
nodes/dm-check-ffmpeg/: README.md  dm.json  pyproject.toml
nodes/dm-check-ffmpeg/dm_check_ffmpeg/: main.py
nodes/dm-check-media-backend/: README.md  dm.json  pyproject.toml
nodes/dm-check-media-backend/dm_check_media_backend/: main.py
nodes/dm-display/: README.md  dm.json  pyproject.toml
nodes/dm-downloader/: README.md  dm.json  pyproject.toml
nodes/dm-downloader/dm_downloader/: main.py
nodes/dm-gate/: README.md  dm.json  pyproject.toml
nodes/dm-gate/dm_gate/: main.py
nodes/dm-input/: README.md  dm.json  pyproject.toml
nodes/dm-input-switch/: dm.json  pyproject.toml
nodes/dm-input/dm_input/: main.py
nodes/dm-log/: README.md  dm.json  pyproject.toml
nodes/dm-message/: README.md  dm.json  (+1 more)
nodes/dm-mjpeg/: Cargo.toml  README.md  dm.json
nodes/dm-mjpeg/src/: lib.rs  main.rs
nodes/dm-queue/: Cargo.toml  README.md  dm.json
nodes/dm-queue/src/: lib.rs  main.rs
nodes/dm-screen-capture/: README.md  dm.json  pyproject.toml
nodes/dm-screen-capture/dm_screen_capture/: main.py
nodes/dm-stream-publish/: README.md  dm.json  pyproject.toml
nodes/dm-stream-publish/dm_stream_publish/: main.py
nodes/dm-test-audio-capture/: README.md  config.json  dm.json  pyproject.toml
nodes/dm-test-audio-capture/dm_test_audio_capture/: main.py
nodes/dm-test-audio-capture/dm_test_audio_capture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: flamegraph.sh  install.sh  migrate_dm_json.py  rewrite_source_links.py
web/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
(+313 files in other folders)
