[workspace]
members = ["crates/dm-core", "crates/dm-cli", "crates/dm-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/l1veIn/dora-manager"

[workspace.dependencies]
# Internal crates
dm-core = { path = "crates/dm-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Filesystem
dirs = "6"
which = "7"
zip = "2"
fs_extra = "1.3"
tempfile = "3"

# IDs
uuid = { version = "1", features = ["v4"] }
semver = { version = "1", features = ["serde"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8.11", features = ["axum"] }
mime_guess = "2"

# Async utilities
futures-util = "0.3"

# Testing
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
