[package]
name = "dm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dora Manager CLI — terminal interface for managing dora-rs environments"

[[bin]]
name = "dm"
path = "src/main.rs"

[dependencies]
dm-core = { path = "../dm-core" }
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"
serde_yaml.workspace = true
dora-core = "0.4.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
