[package]
name = "dm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Dora Manager CLI — terminal interface for managing dora-rs environments"

[[bin]]
name = "dm"
path = "src/main.rs"

[dependencies]
dm-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
chrono.workspace = true
ctrlc = "3"
dora-core = "0.4.1"
dora-node-api.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
