[package]
name = "dm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Dora Manager — business logic with structured data types"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs = "6"
which = "7"
semver = { version = "1", features = ["serde"] }
futures-util = "0.3"
zip = "2"

[dev-dependencies]
tempfile = "3"
