[package]
name = "dm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Dora Manager — business logic with structured data types"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true
toml.workspace = true
dirs = "6"
which = "7"
semver = { version = "1", features = ["serde"] }
futures-util = "0.3"
zip = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
fs_extra = "1.3.0"

[dev-dependencies]
tempfile = "3"
reqwest.workspace = true
