[package]
name = "dm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Dora Manager — business logic with structured data types"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true
toml.workspace = true
dirs.workspace = true
which.workspace = true
semver.workspace = true
futures-util.workspace = true
zip.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
fs_extra.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true

