[package]
name = "dm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dora Manager HTTP API server — REST/WebSocket interface for web UIs"

[[bin]]
name = "dm-server"
path = "src/main.rs"

[dependencies]
dm-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

