[package]
name = "dm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dora Manager HTTP API server — REST/WebSocket interface for web UIs"

[[bin]]
name = "dm-server"
path = "src/main.rs"

[dependencies]
dm-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
chrono.workspace = true
rusqlite.workspace = true
zip.workspace = true
futures-util.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
notify = "8.2.0"

[dev-dependencies]
tempfile.workspace = true
