[project]
name = "dm-downloader"
version = "0.1.0"
description = "Model weight downloader with hash verification, extraction, and Panel UI lifecycle"
requires-python = ">=3.10"
dependencies = ["dora-rs >= 0.3.9", "pyarrow", "requests", "platformdirs"]

[project.scripts]
dm-downloader = "dm_downloader.main:main"
