[package]
name = "dora-dm-mjpeg"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MJPEG preview sink node for Dora Manager"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
dora-message = "0.7.0"
dora-node-api = "0.4.1"
futures-util = "0.3"
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tower = "0.5"

[workspace]
