[project]
name = "dm-test-audio-capture"
version = "0.1.0"
description = "Builtin DM test node for fixed-duration microphone capture"
requires-python = ">=3.10"
dependencies = ["dora-rs >= 0.3.9", "pyarrow", "numpy", "sounddevice"]

[project.scripts]
dm-test-audio-capture = "dm_test_audio_capture.main:main"
